# plotx

./: .gitattributes  .gitignore  AGENTS.md  COMMERCIAL-LICENSE.md  CONTRIBUTING.md  CONTRIBUTOR-LICENSE-AGREEMENT.md  COPYRIGHT.md  Cargo.toml  README.md  deny.toml
crates/analysis/: Cargo.toml
crates/analysis/src/: alignment.rs  diffusion.rs  electrophysiology.rs  fit.rs  ilt.rs  integrate_2d.rs  lib.rs  lineshape.rs  models.rs  multiplet.rs  peaks.rs  pseudo2d_impl.rs  relaxation.rs  series.rs  series_reduce.rs  stack.rs
crates/analysis/src/fit_model/: definition.rs  dsl.rs  fitting.rs  mod.rs  prediction.rs  program.rs
crates/analysis/src/fit_model/fitting/: engine.rs  results.rs  solvers.rs  tests.rs
crates/analysis/src/integrate_2d/: prepared.rs
crates/analysis/src/lineshape/: tests.rs
crates/analysis/src/statistics/: anova.rs  correlation.rs  descriptive.rs  histogram.rs  kde.rs  mod.rs  normality.rs  post_hoc.rs  t_test.rs
crates/app/: AGENTS.md  Cargo.toml  build.rs
crates/app/src/: main.rs  observability.rs  observability_tests.rs  scale.rs  shot.rs
crates/app/src/ui/: align.rs  arithmetic.rs  batch_workflow.rs  canvas_size.rs  clipboard_figure.rs  clipboard_native.rs  clipboard_table.rs  command_exec.rs  command_palette.rs  commands.rs  commands_tests.rs  data_export_dialog.rs  data_sheet.rs  diagnostics.rs  export_dialog.rs  figure_typography.rs  file_dialogs.rs  menus.rs  mod.rs  native_menu.rs  object_inspector.rs  present.rs  primary_sidebar.rs  processing_templates.rs  ribbon.rs  secondary_sidebar.rs  settings_dialog.rs  shortcuts.rs  switcher.rs  title_bar.rs  windows.rs
crates/app/src/ui/canvas/: authoring.rs  board.rs  board_notes.rs  board_tests.rs  chrome.rs  geometry.rs  mod.rs  (+12 more)
crates/app/tests/: no_tofu.rs
crates/cli/: Cargo.toml  README.md
crates/cli/src/: main.rs
crates/cli/tests/: batch_cli.rs
crates/core/: Cargo.toml
crates/core/src/: data_export.rs  delimited.rs  figures.rs  fit_model_library.rs  layout.rs  lib.rs  operation.rs  origin.rs  origin_hardening_tests.rs  origin_tests.rs  templates.rs  theme.rs  workflow.rs  xlsx.rs
crates/core/src/actions/: arrange.rs  build.rs  mod.rs  processing_state.rs  transfer.rs  zorder.rs
crates/core/src/automation/: mod.rs  registry.rs  resources.rs  tasks.rs  tests.rs  tools.rs  types.rs  types_tests.rs  workflow.rs
crates/core/src/data_export/: service.rs  service_tests.rs  tests.rs  write.rs  xlsx.rs
crates/core/src/delimited/: typed.rs
crates/core/src/export/: fonts.rs  mod.rs  precheck.rs  preset.rs  raster.rs  state_tests.rs  trim.rs
crates/core/src/layout/: visual_spacing.rs
crates/core/src/origin/: names.rs  preflight.rs
crates/core/src/project/: afm_convert.rs  afm_convert_tests.rs  axis_overrides.rs  cleanup_tests.rs  codec.rs  convert.rs  convert_dimensions.rs  convert_recipes.rs  dto.rs  dto_tests.rs  electrophysiology_convert.rs  electrophysiology_tests.rs  integrals2d.rs  lineage_tests.rs  linefit_tests.rs  mod.rs  multiplet_tests.rs  persistence.rs  persistence_tests.rs  pipeline_conv.rs  pseudo_tests.rs  reference_tests.rs  schema_tests.rs  scheme.rs  step_identity_tests.rs  templates.rs  tests.rs  tests_charts.rs  typed_table.rs
crates/core/src/settings/: io.rs  migrate.rs  mod.rs  model.rs  paths.rs  tests.rs
crates/core/src/state/: afm.rs  app_impl.rs  app_impl_align.rs  app_impl_analysis.rs  app_impl_analysis_tests.rs  app_impl_arithmetic.rs  app_impl_compute.rs  app_impl_compute_tests.rs  app_impl_io.rs  app_impl_linefit.rs  app_impl_multiplet.rs  app_impl_peaks.rs  app_impl_slice.rs  app_impl_statistics.rs  app_impl_statistics_tests.rs  app_state.rs  axis_overrides.rs  board.rs  charts.rs  compute.rs  dataset_identity.rs  dataset_trace.rs  datasets.rs  datasets_2d_figure.rs  datasets_2d_maps.rs  document.rs  document_identity.rs  electrophysiology.rs  fit_selection.rs  identity.rs  identity_tests.rs  interaction.rs  lineage.rs  linefit.rs  mod.rs  multiplet.rs  nmr_integrals.rs  nmr_integrals_2d.rs  nus.rs  page_fit.rs  (+23 more)
crates/core/src/update/: channel.rs  install.rs  mod.rs  protocol.rs  service.rs  tests.rs
crates/core/src/xlsx/: tests.rs
crates/core/tests/: afm_canvas.rs  slice.rs  slice2d.rs
crates/data/: Cargo.toml  SEMANTICS.md
crates/data/src/: array.rs  column_lineage.rs  error.rs  execute.rs  execute_expr.rs  execute_relations.rs  execute_reshape.rs  execution_input.rs  id.rs  lib.rs  materialized_snapshot.rs  patch_rebase.rs  plan.rs  revision.rs  row_provenance.rs  schema.rs  snapshot.rs  source.rs  storage.rs  typecheck.rs  unit_registry.rs
crates/datafusion/: Cargo.toml
crates/datafusion/benches/: README.md  table_scale.rs
crates/datafusion/examples/: table_scale.rs
crates/datafusion/src/: backend.rs  lib.rs
crates/datafusion/src/backend/: batch.rs  compiler_helpers.rs  identity.rs  large_tests.rs  outer_join_tests.rs  relations.rs  result.rs  runtime.rs  snapshot_stream.rs  tests.rs
crates/figure/: Cargo.toml
crates/figure/src/: colormap.rs  lib.rs
crates/io/: Cargo.toml
crates/io/src/: abf2.rs  archive.rs  bruker.rs  delimited.rs  jcamp_dx.rs  jeol.rs  lib.rs  nanoscope.rs  nanoscope_calibration.rs  nanoscope_companion.rs  nanoscope_tests.rs  origin.rs  xlsx.rs
crates/io/src/bruker/: processed.rs
crates/io/src/jcamp_dx/: tests.rs
crates/io/src/jeol/: filter.rs  nus.rs  ruler.rs  tests.rs
crates/io/src/origin/: opj.rs  opju.rs  reader.rs  reader_tests.rs  tests.rs
crates/io/tests/: bruker_processed.rs  origin_fixtures.rs
crates/processing/: Cargo.toml
crates/processing/src/: align.rs  arithmetic.rs  autophase.rs  baseline.rs  cleanup.rs  fft.rs  fft2.rs  lib.rs  nus.rs  phase.rs  slice.rs  tests.rs  timeseries.rs  twod.rs
crates/processing/tests/: auto_correction_quality.rs
crates/render/: Cargo.toml
crates/render/src/: contour.rs  emf.rs  integral.rs  lib.rs  screen.rs  screen_stats.rs  screen_tests.rs  svg.rs  tests.rs  ticks.rs
crates/render/src/emf/: dc.rs  tests.rs
crates/render/src/svg/: document.rs
crates/substrait/: Cargo.toml
crates/substrait/src/: adapter.rs  lib.rs
(+152 files in other folders)
