[package]
name = "plotx"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
description = "PlotX desktop application."

[[bin]]
name = "plotx"
path = "src/main.rs"

[features]
# Default builds use the reference executor. Release builds enable DataFusion
# through `cargo release-build`; the About window shows the active executor.
default = []
datafusion = ["plotx-core/datafusion"]

[dependencies]
plotx-core.workspace = true
plotx-analysis.workspace = true
plotx-io.workspace = true
plotx-figure.workspace = true
plotx-processing.workspace = true
plotx-render = { workspace = true, features = ["emf"] }
egui.workspace = true
eframe.workspace = true
egui_extras.workspace = true
egui-phosphor.workspace = true
image.workspace = true
num-complex.workspace = true
rfd.workspace = true
serde_json.workspace = true
uuid.workspace = true

[target.'cfg(windows)'.dependencies]
raw-window-handle.workspace = true
windows-sys.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
muda.workspace = true

[target.'cfg(windows)'.build-dependencies]
winresource = "0.1"

[dev-dependencies]
ab_glyph = "0.2"
